[gd_scene load_steps=8 format=2]

[ext_resource path="res://Textures/BossDisk.png" type="Texture" id=1]
[ext_resource path="res://Textures/BossIris.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Boss.gd" type="Script" id=3]
[ext_resource path="res://Scripts/BossHitbox.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[sub_resource type="CircleShape2D" id=2]
radius = 33.0

[sub_resource type="CircleShape2D" id=3]
radius = 33.0

[node name="Boss" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 3 )

[node name="Disk" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Eyes" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="RotationTimer" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 3 )
[connection signal="timeout" from="RotationTimer" to="." method="_on_RotationTimer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
